# VelocityMapper

./: Cargo.toml  README.md  bundler.toml
.github/workflows/: build_and_release.yml
src/: editor.rs  lib.rs  params.rs
src/gui/: dropdown_param.rs  map_module.rs  mod.rs
