[package]
name = "velocitymapper"
version = "1.0.0"
edition = "2021"
authors = ["Leon Focker <contact@leonfocker.de>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "mapping midi notes"

[workspace]
members = ["xtask", "."]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
vizia_plug = { git = "https://github.com/vizia/vizia-plug.git" }
smallvec = "1.15.1"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"